--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2141,13 +2141,20 @@ footer {
     display: flex;
   }
 
+  .box .box_title {
+    font-size: 16px;
+    padding-top: 6px;
+    padding-bottom: 5px;
+}
+
   .arrow_1 {
-    left: 42%;
+    top: 2rem;
+    left: 41%;
   }
   
   .arrow_1 img{
-    width: 50%;
-    rotate: -3deg;
+    width: 40%;
+    rotate: -1deg;
   }
 
   .arrow_2 {
@@ -2173,10 +2180,11 @@ footer {
   .arrow_4 {
     top: 9rem;
     left: 2rem;
+    rotate: 4deg;
   }
 
   .arrow_4 img{
-    width: 90%;
+    width: 100%;
   }
 
 
@@ -2301,14 +2309,34 @@ footer {
 
 @media screen and (max-width: 476px) {
   .arrow_1 img{
-    width: 70%;
+    width: 60%;
     rotate: -3deg;
   }
+
+  .arrow_1 {
+    top: 3rem;
+    left: 41%;
+  }
+
+  .arrow_2 {
+    bottom: 9rem;
+    right: 3rem;
+  }
+
+  .date_content {
+    height: 310px;
 }
 
-@media screen and (max-width: 396px) {
+
+}
+
+@media screen and (max-width: 399px) {
   .arrow_1 img{
     width: 90%;
-    rotate: -3deg;
+    rotate: -2deg;
   }
+
+  .date_content {
+    height: 290px;
+}
 }
